--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,15 @@
                 <h1 class="fontThird">HAPPY</h1>
                 <h1 class="fontFourth">BIRTHDAY</h1>
             </div>
+            <form class="hero__form">
+                <label class="fontFifth" for="birthday">Insira aqui sua data de aniversário</label>
+                <input class="hero__form__input fontSecond" type="date" name="birthday" id="bday" required>
+            </form>
+            <button class="hero__btn fontSeventh">Calcular</button>
+            <div class="hero__counter">
+                <h1 id="faltam" class="hero__counter__faltam fontThird">Faltam</h1>
+                <span id="counter" class="hero__counter__data fontSixth">???</span>
+            </div>
         </div>
     </section>
     <script src="scripts/main.js"></script>
